Fix up some of the tables when data is too long

--- a/CTFd/themes/core/assets/css/main.scss
+++ b/CTFd/themes/core/assets/css/main.scss
@@ -30,6 +30,10 @@ table > thead > tr > td {
   border-top: none !important;
 }
 
+.table thead th {
+  white-space: nowrap;
+}
+
 .fa-spin.spinner {
   margin-top: 225px;
   text-align: center;
